--- a/index.html
+++ b/index.html
@@ -1,9 +1,78 @@
-<!doctype>
-<html>
+<!doctype html>
+<html lang="pt-br">
   <head>
-    <title>Hello World</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <title>HTML5-CSS3</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <nav>
+      <p>Batuta Corp</p>
+      <ul type="square">
+        <li><a href="#cadastro">Cadastro</a></li>
+        <li><a href="#venda">Venda</a></li>
+        <li><a href="#relatorio">Relatório</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
+    </nav>
+
+    <header>
+      <h1><p>Cabeçalho</p></h1>
+    </header>
+
+    <section id="cadastro">
+      <h3>Cadastro</h3>
+      <p>Texto para Cadastro</p>
+      <div>
+        <img src="img/img-cadastro.jpg" class="img-padrao">
+      </div>
+      <div>
+        <img src="img/img-cadastro2.png" class="img-padrao">
+      </div>
+    </section>
+
+    <section id="venda">
+      <h3>Vendas</h3>
+      <p>Texto para Vendas</p>
+      <div>
+        <img src="img/img-sale.jpg" class="img-padrao">
+      </div>
+      <div>
+        <img src="img/img-sale2.jpeg" class="img-padrao">
+      </div>
+    </section>
+
+    <section id="relatorio">
+      <h3>Relatorio</h3>
+      <p>Texto para Relatório</p>
+      <div>
+        <a href="https://www.google.com" target="_blank">
+          <img src="img/img-relatorio.jpg" class="img-padrao">
+        </a>
+      </div>
+      <div>
+        <img src="img/img-relatorio2.jpg" class="img-padrao">
+      </div>
+    </section>
+
+    <section id="contato">
+      <h3>Contato</h3>
+      <p>Texto para Contato</p>
+      <div>
+        <img src="img/img-contato.jpg" class="img-contato">
+      </div>
+      <p><a href="tel:3299999999">Telefone</a></p>
+      <div>
+        <img src="img/img-contato2.jpg" class="img-contato">
+      </div>
+      <p><a href="mailto:heudesr@gmail.com">E-mail</a></p>
+    </section>
+
+    <p>Hello World!</p>
+
+    <footer>
+      <p>Rodapé: Desenvolvido por Heudes Eduardo Rogério</p>
+    </footer>
   </body>
+
 </html>
